tests/golden/invalid/builtins-02.rego.stderr
fregot ([34mtypecheck error[0m):
  "builtins-02.rego" (line 5, column 3):
  Subtype error:

    5|   0 - set()
         [31m^^^^^^^^^[0m

  Cannot use type [33m[34mnumber[0m[0m as [33m[34mset[0m[36m{[0m[34many[0m[36m}[0m[0m

fregot ([34mtypecheck error[0m):
  "builtins-02.rego" (line 9, column 3):
  Subtype error:

    9|   set() - 0
         [31m^^^^^^^^^[0m

  Cannot use type [33m[34mnumber[0m[0m as [33m[34mset[0m[36m{[0m[34many[0m[36m}[0m[0m
